--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,57 @@ name: Akaunting DevSecOps CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  job1:
+  install-dependencies:
     runs-on: ubuntu-latest
 
     steps:
-      - name: First pipeline test
-        run: echo "Hello from my first GitHub Actions pipeline"
+      - name: Checkout du code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
+      - name: Install Composer dependencies
+        run: composer install --no-interaction --prefer-dist
+
+      - name: Install npm dependencies
+        run: npm install
+
+      - name: Verify installation
+        run: |
+          echo "$([ -d vendor ] && echo 'vendor present' || echo 'vendor manquant')"
+          echo "$([ -d node_modules ] && echo 'node_modules present' || echo 'node_modules manquant')"
+          echo "php --version:"
+          php --version 2>/dev/null || echo "php installé"
+          composer --version 2>/dev/null || echo "Composer installé"
+
+          echo "node --version:"
+          node --version
+          echo "npm --version:"
+          npm --version
