--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,11 @@
-name: Akaunting DevSecOps CI
+name: Akaunting DevSecOps CI/CD
+
+env:
+  MYSQL_DATABASE: akaunting
+  MYSQL_USER: ak_user
+  MYSQL_PASSWORD: ak_password
+  MYSQL_HOST: mysql-service
+  APP_ENV: testing
 
 on:
   push:
@@ -7,6 +14,22 @@ on:
 jobs:
   install-dependencies:
     runs-on: ubuntu-latest
+
+    services:
+      mysql-service:
+        image: mysql:8.0
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_DATABASE: ${{ env.MYSQL_DATABASE }}
+          MYSQL_USER: ${{ env.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
 
     steps:
       - name: Checkout du code
@@ -44,15 +67,27 @@ jobs:
       - name: Install npm dependencies
         run: npm install
 
-      - name: Verify installation
+      - name: Setup application environment
         run: |
-          echo "$([ -d vendor ] && echo 'vendor present' || echo 'vendor manquant')"
-          echo "$([ -d node_modules ] && echo 'node_modules present' || echo 'node_modules manquant')"
-          echo "php --version:"
-          php --version 2>/dev/null || echo "php installé"
-          composer --version 2>/dev/null || echo "Composer installé"
+            echo "== Configuration de l'environnement... =="
 
-          echo "node --version:"
-          node --version
-          echo "npm --version:"
-          npm --version
+            cp .env.example .env
+            php artisan key:generate
+
+            sed -i "s/APP_ENV=.*/APP_ENV=${{ env.APP_ENV }}/" .env
+            sed -i "s/APP_DEBUG=.*/APP_DEBUG=true/" .env
+            sed -i "s/DB_HOST=.*/DB_HOST=mysql-service/" .env
+            sed -i "s/DB_PORT=.*/DB_PORT=3306/" .env
+            sed -i "s/DB_DATABASE=.*/DB_DATABASE=${{ env.MYSQL_DATABASE }}/" .env
+            sed -i "s/DB_USERNAME=.*/DB_USERNAME=${{ env.MYSQL_USER }}/" .env
+            sed -i "s/DB_PASSWORD=.*/DB_PASSWORD=${{ env.MYSQL_PASSWORD }}/" .env
+
+            mkdir -p storage/framework/{sessions,views,cache}
+            mkdir -p bootstrap/cache
+
+      - name: Setup Database
+        run: |
+            echo "== Configuration de la base de données... =="
+            mysql -h mysql-service -u${{ env.MYSQL_USER }} -p${{ env.MYSQL_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.MYSQL_DATABASE }};"
+            php artisan migrate
+            echo "== Base de données configurée =="
