--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,7 +195,6 @@ jobs:
           push: false
           load: true
           tags: |
-            ${{ env.DOCKER_IMAGE_NAME }}:latest
             ${{ env.IMAGE_TAG_COMMIT }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -204,7 +203,7 @@ jobs:
       - name: Save Docker image to tar file
         run: |
           echo "=== Sauvegarde de l'image Docker ==="
-          docker save ${{ env.DOCKER_IMAGE_NAME }}:latest -o docker-image.tar
+          docker save ${{ env.IMAGE_TAG_COMMIT }} -o docker-image.tar
           echo "== Image sauvegardée =="
           ls -lh docker-image.tar
 
@@ -214,3 +213,44 @@ jobs:
           name: docker-image-${{ env.DOCKER_IMAGE_NAME }}
           path: docker-image.tar
           retention-days: 1
+
+  push:
+    runs-on: ubuntu-latest
+    needs: build
+    env:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKER_IMAGE_NAME: ${{ vars.DOCKER_IMAGE_NAME}}
+      DOCKERHUB_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.DOCKER_IMAGE_NAME }}:${{ github.sha }}
+
+    steps:
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image-${{ env.DOCKER_IMAGE_NAME }}-${{ github.sha }}
+          path: ./
+
+      - name: Load Docker image from tar file
+        run: |
+            echo "=== Chargement de l'image Docker depuis le fichier tar ==="
+            docker load -i docker-image.tar
+            echo "== Images chargée =="
+            docker images
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+            username: ${{ env.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Tag image for Docker Hub
+        run: |
+            echo "=== Tag de l'image pour Docker Hub ==="
+            docker tag ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }} ${{ env.DOCKERHUB_TAG }}
+            echo "== Images taggées =="
+            docker images | grep ${{ env.DOCKERHUB_USERNAME }}
+
+      - name: Push to Docker Hub
+        run: |
+            echo "=== Push vers Docker Hub ==="
+            docker push ${{ env.DOCKERHUB_TAG }}
+            echo "== Images poussées avec succès =="
