--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -210,7 +210,7 @@ jobs:
       - name: Upload Docker image as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: docker-image-${{ env.DOCKER_IMAGE_NAME }}
+          name: docker-image-${{ env.DOCKER_IMAGE_NAME }}-${{ github.sha }}
           path: docker-image.tar
           retention-days: 1
 
