--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,170 +106,162 @@ jobs:
           echo "== Base de données configurée =="
 
 
-  run-tests:
-    name: unit & feature tests
-    runs-on: ubuntu-latest
-    needs: install-dependencies
-    continue-on-error: true
-
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-
-      - uses: actions/cache@v3
-        with:
-          path: vendor
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-
-      - name: Check dependencies
-        run: |
-          if [ ! -d "vendor" ]; then
-            echo "== vendor non trouvé, installation... =="
-            composer install --no-scripts
-          else
-            echo "== Utilisation du cache Composer =="
-          fi
-
-      - name: Setup test environment
-        run: |
-          echo "== Configuration de l'environnement de test... =="
-          cp .env.example .env.testing
-          php artisan key:generate --env=testing
-          sed -i "s/DB_HOST=.*/DB_HOST=127.0.0.1/" .env.testing
-          sed -i "s/DB_DATABASE=.*/DB_DATABASE=${{ secrets.MYSQL_DATABASE }}/" .env.testing
-
-      - name: Run unit tests
-        run: |
-          echo "== Lancement des tests unitaires... =="
-          vendor/bin/phpunit --testsuite Unit --log-junit unit-report.xml
-          echo "== Tests unitaires terminés =="
-        continue-on-error: true
-
-#      - name: Run feature tests
+#  run-tests:
+#    name: unit & feature tests
+#    runs-on: ubuntu-latest
+#    needs: install-dependencies
+#    continue-on-error: true
+#
+#    services:
+#      mysql:
+#        image: mysql:8.0
+#        env:
+#          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+#          MYSQL_USER: ${{ secrets.MYSQL_USER }}
+#          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+#          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+#
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Setup PHP
+#        uses: shivammathur/setup-php@v2
+#        with:
+#          php-version: '8.3'
+#
+#      - uses: actions/cache@v3
+#        with:
+#          path: vendor
+#          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+#
+#      - name: Check dependencies
 #        run: |
-#          echo "== Lancement des tests fonctionnels... =="
-#          vendor/bin/phpunit --testsuite Feature --log-junit feature-report.xml
-#          echo "== Tests fonctionnels terminés =="
+#          if [ ! -d "vendor" ]; then
+#            echo "== vendor non trouvé, installation... =="
+#            composer install --no-scripts
+#          else
+#            echo "== Utilisation du cache Composer =="
+#          fi
+#
+#      - name: Setup test environment
+#        run: |
+#          echo "== Configuration de l'environnement de test... =="
+#          cp .env.example .env.testing
+#          php artisan key:generate --env=testing
+#          sed -i "s/DB_HOST=.*/DB_HOST=127.0.0.1/" .env.testing
+#          sed -i "s/DB_DATABASE=.*/DB_DATABASE=${{ secrets.MYSQL_DATABASE }}/" .env.testing
+#
+#      - name: Run unit tests
+#        run: |
+#          echo "== Lancement des tests unitaires... =="
+#          vendor/bin/phpunit --testsuite Unit --log-junit unit-report.xml
+#          echo "== Tests unitaires terminés =="
 #        continue-on-error: true
+#
+##      - name: Run feature tests
+##        run: |
+##          echo "== Lancement des tests fonctionnels... =="
+##          vendor/bin/phpunit --testsuite Feature --log-junit feature-report.xml
+##          echo "== Tests fonctionnels terminés =="
+##        continue-on-error: true
+#
+#      - name: Upload test reports
+#        if: always()
+#        uses: actions/upload-artifact@v4
+#        with:
+#            name: test-reports-${{ github.run_id }}
+#            path: |
+#              unit-report.xml
+##              feature-report.xml
 
-      - name: Upload test reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-            name: test-reports-${{ github.run_id }}
-            path: |
-              unit-report.xml
-#              feature-report.xml
+semgrep-sast:
+  name: SAST Security avec Semgrep
+  runs-on: ubuntu-latest
+  needs: install
+  continue-on-error: true
 
-  build:
-    name: Build docker image
-    runs-on: ubuntu-latest
-    needs: run-tests
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    env:
-      DOCKER_IMAGE_NAME: ${{ vars.DOCKER_IMAGE_NAME}}
-      IMAGE_TAG_COMMIT: ${{ vars.DOCKER_IMAGE_NAME}}:${{ github.sha }}
+    - name: Create directories
+      run: |
+        mkdir -p "GitHub Actions/SAST Security/Reports"
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Run Semgrep SAST
+      run: |
+        python -m pip install semgrep
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        semgrep ci --config=auto --json > "GitHub Actions/SAST Security/Reports/semgrep-general.json"
+        echo "== Scan général terminé =="
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          push: false
-          load: true
-          tags: |
-            ${{ env.IMAGE_TAG_COMMIT }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64
+        semgrep ci --config=p/owasp-top-ten --json > "GitHub Actions/SAST Security/Reports/semgrep-owasp.json"
+        echo "== Scan OWASP terminé =="
 
-      - name: Save Docker image to tar file
-        run: |
-          echo "=== Sauvegarde de l'image Docker ==="
-          docker save ${{ env.IMAGE_TAG_COMMIT }} -o docker-image.tar
-          echo "== Image sauvegardée =="
-          ls -lh docker-image.tar
+        semgrep ci --config=p/laravel --json > "GitHub Actions/SAST Security/Reports/semgrep-laravel.json"
+        echo "== Scan Laravel terminé =="
 
-      - name: Upload Docker image as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: docker-image-${{ env.DOCKER_IMAGE_NAME }}-${{ github.sha }}
-          path: docker-image.tar
-          retention-days: 1
+    - name: Upload reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: sast-reports-${{ github.sha }}
+        path: |
+          GitHub Actions/SAST Security/Reports/
+        retention-days: 7
 
-  scan:
-    name: Scan docker image with Trivy
-    runs-on: ubuntu-latest
-    needs: build
-    env:
-      DOCKER_IMAGE_NAME: ${{ vars.DOCKER_IMAGE_NAME }}
-      IMAGE_TAG: ${{ github.sha }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download Docker image artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: docker-image-${{ env.DOCKER_IMAGE_NAME }}-${{ github.sha }}
-          path: ./
-
-      - name: Load Docker image from tar file
-        run: |
-          echo "=== Chargement de l'image Docker depuis le fichier tar ==="
-          docker load -i docker-image.tar
-          echo "== Images chargées =="
-          docker images
-
-      - name: Set Date
-        id: set-date
-        run: echo "DATE=$(date +%m.%d.%Y)" >> $GITHUB_ENV
-
-      - name: Create output directory
-        run: mkdir -p "GitHub Actions/Trivy Automation"
-
-      - name: Install Trivy
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl
-          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo sh -s -- -b /usr/local/bin v0.57.0
-
-      - name: Download Trivy vulnerability database
-        run: trivy image --download-db-only
-
-      - name: Run Trivy vulnerability scanner
-        run: |
-          OUTPUT_FILE="GitHub Actions/Trivy Automation/scan-results-${DATE}.json"
-          mkdir -p "GitHub Actions/Trivy Automation"
-          trivy image --format json --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH,MEDIUM,LOW -o "$OUTPUT_FILE" ${{ env.DOCKER_IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-
-      - name: Upload scan results as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-scan-results-${{ env.DATE }}
-          path: GitHub Actions/Trivy Automation/
-          retention-days: 7
+#  scan:
+#    name: Scan docker image with Trivy
+#    runs-on: ubuntu-latest
+#    needs: build
+#    env:
+#      DOCKER_IMAGE_NAME: ${{ vars.DOCKER_IMAGE_NAME }}
+#      IMAGE_TAG: ${{ github.sha }}
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#
+#      - name: Download Docker image artifact
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: docker-image-${{ env.DOCKER_IMAGE_NAME }}-${{ github.sha }}
+#          path: ./
+#
+#      - name: Load Docker image from tar file
+#        run: |
+#          echo "=== Chargement de l'image Docker depuis le fichier tar ==="
+#          docker load -i docker-image.tar
+#          echo "== Images chargées =="
+#          docker images
+#
+#      - name: Set Date
+#        id: set-date
+#        run: echo "DATE=$(date +%m.%d.%Y)" >> $GITHUB_ENV
+#
+#      - name: Create output directory
+#        run: mkdir -p "GitHub Actions/Trivy Automation"
+#
+#      - name: Install Trivy
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y curl
+#          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo sh -s -- -b /usr/local/bin v0.57.0
+#
+#      - name: Download Trivy vulnerability database
+#        run: trivy image --download-db-only
+#
+#      - name: Run Trivy vulnerability scanner
+#        run: |
+#          OUTPUT_FILE="GitHub Actions/Trivy Automation/scan-results-${DATE}.json"
+#          mkdir -p "GitHub Actions/Trivy Automation"
+#          trivy image --format json --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH,MEDIUM,LOW -o "$OUTPUT_FILE" ${{ env.DOCKER_IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+#
+#      - name: Upload scan results as artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: trivy-scan-results-${{ env.DATE }}
+#          path: GitHub Actions/Trivy Automation/
+#          retention-days: 7
 
 
 #  push:
