--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
     branches: [main]
 
 jobs:
-  install-dependencies:
+  install:
     name: install Project dependencies
     runs-on: ubuntu-latest
 
