--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,7 +175,7 @@ jobs:
 ##              feature-report.xml
 
   semgrep-sast:
-    name: SAST Security avec Semgrep
+    name: SAST Security with Semgrep
     runs-on: ubuntu-latest
     needs: install
     continue-on-error: true
@@ -192,13 +192,13 @@ jobs:
         run: |
           python -m pip install semgrep
 
-          semgrep ci --config=auto --json > "GitHub Actions/SAST Security/Reports/semgrep-general.json"
+          semgrep scan --config=auto --json > "GitHub Actions/SAST Security/Reports/semgrep-general.json"
           echo "== Scan général terminé =="
 
-          semgrep ci --config=p/owasp-top-ten --json > "GitHub Actions/SAST Security/Reports/semgrep-owasp.json"
+          semgrep scan --config=p/owasp-top-ten --json > "GitHub Actions/SAST Security/Reports/semgrep-owasp.json"
           echo "== Scan OWASP terminé =="
 
-          semgrep ci --config=p/laravel --json > "GitHub Actions/SAST Security/Reports/semgrep-laravel.json"
+          semgrep scan --config=p/laravel --json > "GitHub Actions/SAST Security/Reports/semgrep-laravel.json"
           echo "== Scan Laravel terminé =="
 
       - name: Upload reports
